src/frontend/packages/lib_common/src/cunningham/cunningham-style.css
@import '@openfun/cunningham-react/icons';
@import '@openfun/cunningham-react/style';
@import '@openfun/cunningham-react/fonts';
@import './cunningham-tokens.css';
@import './cunningham-custom-tokens.css';

.c__input, .c__field, .c__select, .c__datagrid, .typo {
  font-family: var(--c--theme--font--families--base);
}
.c__field {
  line-height: initial;
}
.labelled-box label {
  color: var(--c--theme--colors--primary-500);
}
.labelled-box--disabled label {
  color: var(--c--components--forms-labelledbox--label-color--small--disabled);
}
.c__field :not(.c__textarea__wrapper, div) .labelled-box label.placeholder {
  top: 50%;
  transform: translateY(-50%);
}
.typo {
  line-height: normal;
}
.typo-text:not([class*="clr-"]), .fs-h {
  color: var(--c--theme--colors--primary-500);
}
.typo-box{
  display: flex;
  box-sizing: border-box;
}
/**
 * Input
 * TextArea
*/
.c__input__wrapper, .c__textarea__wrapper {
  transition: all var(--c--theme--transitions--duration)
    var(--c--theme--transitions--ease-out);
}
.c__input__wrapper:has(input[readonly]), .c__input__wrapper:has(input[readonly]) * {
  cursor: default;
}
.c__textarea__wrapper:has(input.border-none), .c__textarea__wrapper:has(input.border-none) *,
.c__input__wrapper:has(input.border-none), .c__input__wrapper:has(input.border-none) * {
  border: none;
}
.c__input__wrapper:hover, .c__textarea__wrapper:hover {
  box-shadow: var(--c--theme--colors--primary-500) 0px 0px 0px 2px;
}
.c__textarea__wrapper--disabled:hover, 
.c__input__wrapper--disabled:hover, .c__input__wrapper:hover:has(input[readonly]) {
  box-shadow: var(--c--theme--colors--primary-500) 0px 0px 0px 0px;
}
.c__input__wrapper--disabled {
  color: var(--c--components--forms-input--value-color--disabled);
}
.c__input__wrapper .labelled-box__label.placeholder {
  cursor: inherit;
}
.c__input__wrapper .c__input, .c__textarea__wrapper .c__textarea {
  width: 100%;
}
.c__input__wrapper--disabled .c__input {
  color: var(--c--components--forms-input--value-color--disabled);
}
input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition:
    background-color 0s 600000s,
    color 0s 600000s;
}
.c__textarea__wrapper .c__textarea {
  color: var(--c--components--forms-textarea--color);
}
.c__textarea__wrapper:hover {
  border-color: var(--c--components--forms-textarea--border-color-hover);
}
.c__textarea__wrapper--disabled:hover {
  border-color: var(--c--components--forms-textarea--disabled--border-color-hover);
}
/**
 * Select
*/
.c_select__no_border .c__select .c__select__wrapper,
.c_select__no_border .c__select .c__select__wrapper:hover, 
.c_select__no_border .c__select:not(.c__select--disabled) .c__select__wrapper:hover {
  border: none;
  box-shadow: none;
}
.c__select__wrapper {
  transition: all var(--c--theme--transitions--duration)
    var(--c--theme--transitions--ease-out);
}
.c__select:not(.c__select--disabled) .c__select__wrapper:hover {
  box-shadow: var(--c--theme--colors--primary-500) 0px 0px 0px 2px;
}
.c__select__menu__item {
  transition: all var(--c--theme--transitions--duration)
    var(--c--theme--transitions--ease-out);
}
.c__select--disabled .c__select__wrapper label, .c__select--disabled .c__select__wrapper input {
  background: none;
}
.c__select__wrapper:focus-within .labelled-box--disabled label {
  color: var(--c--components--forms-labelledbox--label-color--small--disabled);
}
/**
 * DataGrid
*/
.c__datagrid > table td {
  max-width: 10rem;
  white-space: normal;
  color: var(--c--components--datagrid--cell--color);
  font-size: var(--c--components--datagrid--cell--size);
}
.c__datagrid > table th .c__datagrid__header {
  color: var(--c--theme--colors--primary-500);
  font-weight: var(--c--components--datagrid--header--weight);
  font-size: var(--c--components--datagrid--header--size);
}
.c__datagrid > table tbody tr {
  border: 1px var(--c--theme--colors--primary-100) solid;
}
.c__datagrid > .c__pagination {
  padding-top: 1rem;
  justify-content: flex-end;
}
@media (max-width: 380px) {
  .c__datagrid > .c__pagination {
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }
}
/**
 * Date picker
*/
.c__popover.c__popover--borderless {
  z-index: 3;
}
.c__date-picker__wrapper {
  transition: all var(--c--theme--transitions--duration)
    var(--c--theme--transitions--ease-out);
}
.c__date-picker:not(.c__date-picker--disabled):hover .c__date-picker__wrapper {
  box-shadow: var(--c--theme--colors--primary-500) 0px 0px 0px 2px;
}
.c__date-picker.c__date-picker--invalid:not(.c__date-picker--disabled):hover
  .c__date-picker__wrapper {
  box-shadow: var(--c--theme--colors--danger-300) 0px 0px 0px 2px;
}
.c__date-picker__wrapper button[aria-label='Clear date'],
.c__date-picker.c__date-picker--invalid .c__date-picker__wrapper * {
  color: var(--c--theme--colors--danger-300);
}
/**
 * Others
*/
.c__checkbox:focus-within {
  border-color: transparent;
  background-color: transparent;
}
.c__checkbox {
  transition: all 0.8s ease-in-out;
}
/**
 * Button
*/
.c__button {
  text-decoration: none;
}
.c__button:hover.c__button-no-bg, .c__button.c__button-no-bg, .c__button:disabled.c__button-no-bg {
  background-color: transparent;
}
.c__button--medium {
  padding: 0.9rem var(--c--theme--spacings--s);
}
.c__button--small {
  padding: 0.6rem 0.75rem;
}
.c__button--with-icon--right {
  padding: 0.7rem var(--c--theme--spacings--t) 0.7rem var(--c--theme--spacings--s);
}
.c__button--primary {
  background-color: var(--c--components--button--primary--background--color);
  color: var(--c--components--button--primary--color);
}
.c__button--primary:active, .c__button--primary.c__button--active {
  background-color: var(--c--components--button--primary--background--color-active);
  color: var(--c--components--button--primary--color-active);
  border-color: var(--c--components--button--primary--border--color-active);
}
.c__button:disabled {
  background-color: var(--c--components--button--disabled--background--color);
  color: var(--c--components--button--disabled--color);
}
.c__button--success{
  background-color: var(--c--components--button--success--background--color);
  color: var(--c--components--button--success--color);
}
.c__button--success:hover, .c__button--success:focus-visible {
  background-color: var(--c--components--button--success--background--color-hover);
  color: var(--c--components--button--success--color-hover);
}
.c__button--success:disabled{
  background-color: var(--c--components--button--success--background--color-disabled);
  color: var(--c--components--button--success--color-disabled);
}
.c__button--secondary {
  background-color: var(--c--components--button--secondary--background--color);
  color: var(--c--components--button--secondary--color);
  border: 1px solid  var(--c--components--button--secondary--border--color);
}
.c__button--secondary:hover, .c__button--secondary:focus-visible {
  background-color: var(--c--components--button--secondary--background--color-hover);
  color: var(--c--components--button--secondary--color-hover);
}
.c__button--tertiary {
  color: var(--c--components--button--tertiary--color);
  border: none;
}
.c__button--tertiary:hover, .c__button--tertiary:focus-visible {
  background-color: var(--c--components--button--tertiary--background--color-hover);
  color: var(--c--components--button--tertiary--color);
}
.c__button--tertiary:disabled {
  background-color: var(--c--components--button--tertiary--background--color-disabled);
  color: var(--c--components--button--tertiary--color-disabled);
}
.c__button--danger {
  background-color: var(--c--components--button--danger--background--color);
}
.c__button--danger:hover, .c__button--danger:focus-visible {
  background-color: var(--c--components--button--danger--background--color-hover);
  color: var(--c--components--button--danger--color-hover);
}
.c__button--danger:disabled {
  background-color: var(--c--components--button--danger--background--color-disabled);
}

